--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,14 @@
 steps:
-  - id: image
+  - id: build image
     name: 'gcr.io/kaniko-project/executor'
     args:
-      #- --context=dir://webapp
       - --destination=gcr.io/$PROJECT_ID/telegram-bot:$COMMIT_SHA
       - --cache=true
       - --cache-ttl=24h
       - --build-arg
       - revision=$COMMIT_SHA
-  - id: update development task queue
-    name: 'gcr.io/cloud-builders/gcloud'
-    waitFor: ['image']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    waitFor: ['build image']
     entrypoint: ./bin/deploy_cf.sh
     args:
       - telegram-bot
