--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,1 +1,18 @@
-deployment/cloudbuild.yaml
+steps:
+  - name: gcr.io/cloud-builders/git
+    args: ['submodule', 'update', '--init', '--recursive']
+  - id: build image
+    name: 'gcr.io/kaniko-project/executor'
+    args:
+      - --destination=gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA
+      - --cache=true
+      - --cache-ttl=24h
+      - --build-arg
+      - revision=$COMMIT_SHA
+  - name: 'gcr.io/cloud-builders/gcloud'
+    waitFor: ['build image']
+    entrypoint: ./bin/deploy_cf.sh
+    args:
+      - $REPO_NAME
+      - $PROJECT_ID
+      - /workspace
